# recommend-games-server

./: .boto  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Dockerfile.web  LICENSE  Pipfile  README.md  VERSION  app.yaml  bg_utils.py  build.py  build_all.sh  build_db.sh  build_server.sh  docker-compose.yaml  json_rankings.sh  kubernetes.yaml  load.py  manage.py  news.sh  pyproject.toml  pyrightconfig.json  release.sh  release_full.sh  requirements.txt  sitemap.py  startup.sh
analyses/: beers.ipynb  embed.ipynb  graph.py
app/: .csslintrc  .htmllintrc  BingSiteAuth.xml  app.css  app.js  browserconfig.xml  detail.html  game-square.html  index.html  list.html  robots.txt  staticfiles.json  yandex_239440d2dc89b890.html  yandex_65e8dd66ce33e127.html  yandex_695107127b1e6e89.html  yandex_d02c00610b8b2522.html  yandex_e1591ae567e3e236.html
cluster/: gazetteer.pickle  training.json
config/: exclude.yaml  premium.yaml
games/: admin.py  apps.py  collections.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
ludoj/: __init__.py  app.yaml  extensions.py  index.yaml  middlewares.py  pipelines.py  recommend.py  settings.py  urls.py  utils.py  wsgi.py
models/: kennerspiel.joblib
old/: manage.py
pipeline/: airflow.cfg  unittests.cfg
requirements/: prod.txt
rg/: settings.py  urls.py  views.py  wsgi.py
scripts/: json_rankings.sh  ranking.sh
server/: .gitignore  .pylintrc  README.md  app.yaml  boot.py  install_deps  manage.py  settings.py
static/: index.html
(+97 files in other folders)
